[package]
name = "hyperlane"
version = "4.94.0"
edition = "2024"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = """Hyperlane is a lightweight and high-performance Rust HTTP server library designed to simplify network service development. It supports HTTP request parsing, response building, and TCP communication, making it ideal for building modern web services. Additionally, it provides support for request and response middleware, WebSocket, and Server-Sent Events (SSE), enabling flexible and efficient real-time communication. Built with pure Rust and standard library, Hyperlane offers true cross-platform compatibility across Windows, Linux and macOS, with the same API experience on all platforms, powered by Tokio's async runtime for seamless networking without platform-specific dependencies."""
keywords = ["http", "request", "response", "tcp", "cross-platform"]
repository = "https://github.com/ltpp-universe/hyperlane.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "logs",
    "**/*.log"
]

[lib]
path = "./src/lib.rs"

[workspace]
members = [
    "src/*"
]

[workspace.dependencies]
future-fn = "0.1.0"
clonelicious = "1.1.1"
color-output = "6.6.1"
file-operation = "0.5.9"
hyperlane-log = "1.16.1"
recoverable-spawn = "3.7.2"
recoverable-thread-pool = "2.3.1"
http-type = "3.69.0"
server-manager = "3.2.1"
hyperlane_config = { path = "./src/config" }
hyperlane_context = { path = "./src/context" }
hyperlane_handler = { path = "./src/handler" }
hyperlane_middleware = { path = "./src/middleware" }
hyperlane_route = { path = "./src/route" }
hyperlane_server = { path = "./src/server" }
hyperlane_tmp = { path = "./src/tmp" }
hyperlane_utils = { path = "./src/utils" }

[dependencies]
future-fn.workspace = true
clonelicious.workspace = true
color-output.workspace = true
file-operation.workspace = true
hyperlane-log.workspace = true
recoverable-spawn.workspace = true
recoverable-thread-pool.workspace = true
http-type.workspace = true
server-manager.workspace = true
hyperlane_config.workspace = true
hyperlane_context.workspace = true
hyperlane_handler.workspace = true
hyperlane_middleware.workspace = true
hyperlane_route.workspace = true
hyperlane_server.workspace = true
hyperlane_tmp.workspace = true
hyperlane_utils.workspace = true

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
