[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
http-type.workspace = true
context.workspace = true
route.workspace = true
config.workspace = true
middleware.workspace = true
tmp.workspace = true
hyperlane-log.workspace = true
handler.workspace = true
color-output.workspace = true
utils.workspace = true
