[package]
name = "hyperlane-server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlane-context.workspace = true
hyperlane-route.workspace = true
hyperlane-config.workspace = true
hyperlane-middleware.workspace = true
hyperlane-tmp.workspace = true
hyperlane-log.workspace = true
hyperlane-handler.workspace = true
hyperlane-utils.workspace = true
color-output.workspace = true
http-type.workspace = true

[dev-dependencies]
future-fn.workspace = true
