[package]
name = "hyperlane_server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlane_context.workspace = true
hyperlane_route.workspace = true
hyperlane_config.workspace = true
hyperlane_middleware.workspace = true
hyperlane_tmp.workspace = true
hyperlane-log.workspace = true
hyperlane_handler.workspace = true
hyperlane_utils.workspace = true
color-output.workspace = true
http-type.workspace = true

[dev-dependencies]
future-fn.workspace = true
